# amos-reborn

./: .gitignore  CMakeLists.txt  README.md
demos/: demo1.txt  demo10_real_sprites.txt  demo2_starfield.txt  demo3_plasma.txt  demo4_sprites.txt  demo5_input.txt  demo6_amal.txt  demo7_screen_ops.txt  demo8_fileio.txt  demo9_errors.txt
docs/requirements/: REQ-AML-EDT.md  REQ-AUD.md  REQ-DSP.md  REQ-FMT-EXT.md  REQ-SYS-INT.md  VV_FRAMEWORK.md
include/: amos.h
oracle/: .gitignore  Makefile  README.md
oracle/config/: oracle.conf  oracle.fs-uae
oracle/programs/: REQ-AUD-014_boom.amos  REQ-GFX-001_default_screen.amos  REQ-INT-005_true_value.amos
oracle/scripts/: compare.py  fsuae_capture.sh  oracle_run.sh  setup_check.sh
reference/: AMOS_TECHNICAL_BLUEPRINT.md  COMPATIBILITY_REPORT.md  INTERPRETER_BLUEPRINT.md
src/: main.c
src/audio/: effects.c  mixer.c  paula.c  tracker.c
src/display/: bank_commands.c  bank_loader.c  compositor.c  crt_shader.c  drawing.c  font_topaz.c  iff_commands.c  iff_loader.c  screen.c  sprites.c
src/editor/: editor.c  editor.h
src/hal/: hal.c  hal_classic.c  hal_modern.c
src/interpreter/: amal.c  amos_loader.c  commands.c  executor.c  expressions.c  file_io.c  parser.c  tokenizer.c  variables.c
src/platform/: input.c  platform_sdl2.c
tests/: test_bank_loader.c  test_executor.c  test_expressions.c  test_iff.c  test_main.c  test_parser.c  test_tokenizer.c  vv_amal_tests.c  vv_audio_tests.c  vv_display_tests.c  vv_example_tests.c  vv_format_tests.c  vv_framework.c  vv_framework.h  vv_interpreter_tests.c
tools/: oracle_capture.c  test_load.c  test_oracle.txt
